add audio export

--- a/weatherapi/Weather API.ipynb
+++ b/weatherapi/Weather API.ipynb
@@ -2,23 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#!pip install gTTS\n",
+    "\n",
     "import configparser\n",
     "import requests\n",
     "import sys\n",
-    "from datetime import datetime\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "api_key=('57519d394c970d37633e800dc962803c')"
+    "from datetime import datetime\n",
+    "from gtts import gTTS\n",
+    "\n",
+    "api_key=('57519d394c970d37633e800dc962803c')\n",
+    "\n",
+    "cities = [['Gao','16.6362','1.637'],['Bamba', '7.9036', '-8.7837'],['Kidal','18.4411', '1.4078'],['Kayes','14.4417', '-11.4341']\n",
+    "          ,['Kita','13.0349','-9.4895'],['Kati','12.7441', '-8.0726'],['Koulikoro','12.8627','-7.5599'], ['Tessalit','20.1986', '1.0114']]\n"
    ]
   },
   {
@@ -41,14 +40,12 @@
    "source": [
     "def correct_time(unix):\n",
     "    stamp = int(unix)\n",
-    "    return(datetime.utcfromtimestamp(stamp).strftime('%Y-%m-%d %H:%M:%S'))\n",
-    "\n",
-    "#correct_time(1588244400)"
+    "    return(datetime.utcfromtimestamp(stamp).strftime('%Y-%m-%d %H:%M:%S'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -99,9 +96,6 @@
     }
    ],
    "source": [
-    "cities = [['Gao','16.6362','1.637'],['Bamba', '7.9036', '-8.7837'],['Kidal','18.4411', '1.4078'],['Kayes','14.4417', '-11.4341']\n",
-    "          ,['Kita','13.0349','-9.4895'],['Kati','12.7441', '-8.0726'],['Koulikoro','12.8627','-7.5599'], ['Tessalit','20.1986', '1.0114']]\n",
-    "\n",
     "def forecast(name, lat, lon):\n",
     "    weather = get_weather(api_key, lat, lon)\n",
     "    for i in range(len(weather)):\n",
@@ -123,10 +117,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tts = gTTS('hallo',lang='nl')\n",
+    "tts.save('hello.mp3')\n",
+    "# The text that you want to convert to audio \n",
+    "mytext = \"This is my text in the saving folder\"\n",
+    "\n",
+    "# Language in which you want to convert \n",
+    "language = 'en'\n",
+    "\n",
+    "# Passing the text and language to the engine\n",
+    "tts = gTTS(text=mytext, lang=language, slow=False) \n",
+    "\n",
+    "# Saving the converted audio in a wav file named sample\n",
+    "tts.save('sample.wav')"
+   ]
   },
   {
    "cell_type": "code",
